changed from FFF to 000

--- a/themes/twentyseventeen/assets/css/colors-dark.css
+++ b/themes/twentyseventeen/assets/css/colors-dark.css
@@ -10,7 +10,7 @@
 .colors-dark input[type="button"],
 .colors-dark input[type="submit"],
 .colors-dark .entry-footer .edit-link a.post-edit-link {
-	background-color: #fff;
+	background-color: #000;
 }
 
 .colors-dark a:hover,
@@ -69,7 +69,7 @@
 .colors-dark .widget .widget-title a:hover,
 .colors-dark .widget ul li a:focus,
 .colors-dark .widget ul li a:hover {
-	color: #fff;
+	color: #000;
 }
 
 .colors-dark .entry-content a:focus,
@@ -364,7 +364,7 @@ body.colors-dark,
 .colors-dark input[type="submit"].secondary,
 .colors-dark .prev.page-numbers,
 .colors-dark .next.page-numbers {
-	background-color: #444;
+	background-color: #000;
 }
 
 .colors-dark .widget .tagcloud a,
